[gd_scene load_steps=52 format=3 uid="uid://b0hwdnnrm8c33"]

[ext_resource type="Script" path="res://screens/scripts/character_selection_screen.gd" id="1_64yd2"]
[ext_resource type="Texture2D" uid="uid://c6hryfrcuwu7c" path="res://screens/assets/character_selection_screen.png" id="2_ixkij"]
[ext_resource type="FontFile" uid="uid://be5qc06kpexri" path="res://screens/assets/font_hey_comic.ttf" id="3_r7yy2"]
[ext_resource type="Texture2D" uid="uid://c3khujmfv6deo" path="res://screens/assets/background_choose_character.png" id="4_6tfxa"]
[ext_resource type="Texture2D" uid="uid://c7016hjaugxcy" path="res://characters/assets/cats_dogs.png" id="5_v78lc"]
[ext_resource type="Texture2D" uid="uid://dwg1hroebhex" path="res://screens/assets/icons/Item5.png" id="6_ryn8f"]
[ext_resource type="Texture2D" uid="uid://cl0it22lehhae" path="res://screens/assets/icons/Icon_Writing.png" id="8_4qlne"]
[ext_resource type="Texture2D" uid="uid://d05hd2ur104ca" path="res://screens/assets/icons/Icon_Left.png" id="8_xtkud"]
[ext_resource type="Texture2D" uid="uid://binbu4h6ddy41" path="res://screens/assets/icons/Icon_X.png" id="9_gqy7f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37lk6"]

[sub_resource type="LabelSettings" id="LabelSettings_68kv2"]
font = ExtResource("3_r7yy2")
font_size = 42

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o0nmw"]
texture = ExtResource("4_6tfxa")
expand_margin_bottom = 27.0

[sub_resource type="LabelSettings" id="LabelSettings_rrxlf"]
font = ExtResource("3_r7yy2")
font_size = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ov4fd"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lriw7"]
texture = ExtResource("8_4qlne")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vujq5"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_e6oja"]
Button/styles/hover = SubResource("StyleBoxTexture_ov4fd")
Button/styles/normal = SubResource("StyleBoxTexture_lriw7")
Button/styles/pressed = SubResource("StyleBoxTexture_vujq5")

[sub_resource type="LabelSettings" id="LabelSettings_0k5rk"]
font = ExtResource("3_r7yy2")
font_size = 18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nhhwu"]
texture = ExtResource("6_ryn8f")
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sphuw"]
texture = ExtResource("6_ryn8f")
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0
modulate_color = Color(0.37881, 0.125048, 0.064938, 1)

[sub_resource type="Theme" id="Theme_04v50"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.184314, 0.180392, 0.14902, 1)
Button/font_sizes/font_size = 27
Button/fonts/font = ExtResource("3_r7yy2")
Button/styles/hover = SubResource("StyleBoxTexture_nhhwu")
Button/styles/normal = SubResource("StyleBoxTexture_sphuw")
Button/styles/pressed = SubResource("StyleBoxTexture_sphuw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3r364"]
content_margin_left = 13.0
content_margin_right = 13.0
texture = ExtResource("4_6tfxa")
expand_margin_bottom = 27.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oxtqg"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_826oj"]
texture = ExtResource("8_xtkud")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8re3f"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_m6quw"]
Button/styles/hover = SubResource("StyleBoxTexture_oxtqg")
Button/styles/normal = SubResource("StyleBoxTexture_826oj")
Button/styles/pressed = SubResource("StyleBoxTexture_8re3f")

[sub_resource type="LabelSettings" id="LabelSettings_0itep"]
font = ExtResource("3_r7yy2")
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m0gex"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wauea"]
texture = ExtResource("8_4qlne")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qkf1k"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_pqs78"]
Button/styles/hover = SubResource("StyleBoxTexture_m0gex")
Button/styles/normal = SubResource("StyleBoxTexture_wauea")
Button/styles/pressed = SubResource("StyleBoxTexture_qkf1k")

[sub_resource type="LabelSettings" id="LabelSettings_njso6"]
font = ExtResource("3_r7yy2")
font_size = 18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fnkr2"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s813a"]
texture = ExtResource("8_xtkud")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r8rb6"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_330yv"]
Button/styles/hover = SubResource("StyleBoxTexture_fnkr2")
Button/styles/normal = SubResource("StyleBoxTexture_s813a")
Button/styles/pressed = SubResource("StyleBoxTexture_r8rb6")

[sub_resource type="LabelSettings" id="LabelSettings_fyqq5"]
font = ExtResource("3_r7yy2")
font_size = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5p3u5"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4pbbf"]
texture = ExtResource("8_4qlne")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x3p8t"]
texture = ExtResource("8_4qlne")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_patjy"]
Button/styles/hover = SubResource("StyleBoxTexture_5p3u5")
Button/styles/normal = SubResource("StyleBoxTexture_4pbbf")
Button/styles/pressed = SubResource("StyleBoxTexture_x3p8t")

[sub_resource type="LabelSettings" id="LabelSettings_sq1dj"]
font = ExtResource("3_r7yy2")
font_size = 18

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y10ho"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.411765, 0.647059, 0.788235, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ewr5u"]
texture = ExtResource("8_xtkud")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hpoq4"]
texture = ExtResource("8_xtkud")
modulate_color = Color(0.278431, 0.109804, 0.0588235, 1)

[sub_resource type="Theme" id="Theme_64ma0"]
Button/styles/hover = SubResource("StyleBoxTexture_y10ho")
Button/styles/normal = SubResource("StyleBoxTexture_ewr5u")
Button/styles/pressed = SubResource("StyleBoxTexture_hpoq4")

[sub_resource type="LabelSettings" id="LabelSettings_l1hjr"]
line_spacing = 0.0
font = ExtResource("3_r7yy2")
font_size = 26
shadow_size = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t0drw"]
texture = ExtResource("9_gqy7f")
modulate_color = Color(0.513726, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maoqi"]
texture = ExtResource("9_gqy7f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xy6u5"]
texture = ExtResource("9_gqy7f")
modulate_color = Color(0.313726, 0.670588, 0.847059, 1)

[sub_resource type="Theme" id="Theme_n1g7h"]
Button/styles/hover = SubResource("StyleBoxTexture_t0drw")
Button/styles/normal = SubResource("StyleBoxTexture_maoqi")
Button/styles/pressed = SubResource("StyleBoxTexture_xy6u5")

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64yd2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1440.0
offset_bottom = 810.0
texture = ExtResource("2_ixkij")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1440.0
offset_bottom = 770.0
size_flags_vertical = 0

[node name="MarginTop" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="LabelTeam" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_37lk6")
text = "Equipe Gatos Hackers"
label_settings = SubResource("LabelSettings_68kv2")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginLeft" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="PanelCharacter1" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_o0nmw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Ronronante"
label_settings = SubResource("LabelSettings_rrxlf")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureCharacterCat" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/HBoxContainer/BoxContainer"]
position = Vector2(52, 38)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 82

[node name="TextureCharacterDog" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/HBoxContainer/BoxContainer"]
visible = false
position = Vector2(54, 39)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 25

[node name="ButtonMoreInformation0" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = SubResource("Theme_e6oja")

[node name="LabelSkill" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Habilidade:  Ronronar Calmante"
label_settings = SubResource("LabelSettings_0k5rk")
horizontal_alignment = 1

[node name="SelectButton0" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_04v50")
text = "Selecionar"

[node name="PanelMoreInformation0" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3r364")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter1/PanelMoreInformation0"]
layout_mode = 2
size_flags_vertical = 8

[node name="LabelMoreInformation0" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter1/PanelMoreInformation0/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r7yy2")
theme_override_font_sizes/font_size = 22
text = "EMITE UM RONRONAR CALMANTE QUE REDUZ TEMPORARIAMENTE A VELOCIDADE DOS CACHORROS AO SEU REDOR."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackButton0" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter1/PanelMoreInformation0/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_m6quw")

[node name="PanelCharacter2" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_o0nmw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Bola de Pelos"
label_settings = SubResource("LabelSettings_0itep")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureCharacterCat" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/HBoxContainer/BoxContainer"]
position = Vector2(52, 38)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 79

[node name="TextureCharacterDog" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/HBoxContainer/BoxContainer"]
visible = false
position = Vector2(54, 39)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 31

[node name="ButtonMoreInformation1" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_pqs78")

[node name="LabelSkill" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Habilidade:  Esconderijo Felino"
label_settings = SubResource("LabelSettings_njso6")
horizontal_alignment = 1

[node name="SelectButton1" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_04v50")
text = "Selecionar"

[node name="PanelMoreInformation1" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3r364")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter2/PanelMoreInformation1"]
layout_mode = 2
size_flags_vertical = 8

[node name="LabelMoreInformation1" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter2/PanelMoreInformation1/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r7yy2")
theme_override_font_sizes/font_size = 22
text = "LIBERA UMA NUVEM DE PÊLOS FOFOS, OBSTRUINDO A VISÃO DOS CACHORROS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackButton1" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter2/PanelMoreInformation1/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_330yv")

[node name="PanelCharacter3" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_o0nmw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Sombra"
label_settings = SubResource("LabelSettings_fyqq5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureCharacterCat" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/HBoxContainer/BoxContainer"]
position = Vector2(52, 38)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 76

[node name="TextureCharacterDog" type="Sprite2D" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/HBoxContainer/BoxContainer"]
visible = false
position = Vector2(54, 39)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v78lc")
hframes = 12
vframes = 8
frame = 34

[node name="ButtonMoreInformation2" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_patjy")

[node name="LabelSkill" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Habilidade:  Ataque de Pelos"
label_settings = SubResource("LabelSettings_sq1dj")
horizontal_alignment = 1

[node name="SelectButton2" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_04v50")
text = "Selecionar"

[node name="PanelMoreInformation2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3r364")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacter3/PanelMoreInformation2"]
layout_mode = 2
size_flags_vertical = 8

[node name="LabelMoreInformation2" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacter3/PanelMoreInformation2/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r7yy2")
theme_override_font_sizes/font_size = 22
text = "PODE SE ESCONDER EM LOCAIS ESTRATÉGICOS, TORNANDO-SE TEMPORARIAMENTE INVISÍVEL PARA OS CACHORROS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackButton2" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacter3/PanelMoreInformation2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_64ma0")

[node name="MarginRight" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Escolha seu personagem"
label_settings = SubResource("LabelSettings_l1hjr")
horizontal_alignment = 1
vertical_alignment = 2

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1322.0
offset_top = 51.0
offset_right = 1403.0
offset_bottom = 130.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = SubResource("Theme_n1g7h")
theme_override_font_sizes/font_size = 59

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/HBoxContainer/ButtonMoreInformation0" to="." method="_on_button_more_information_0_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter1/VBoxContainer/SelectButton0" to="." method="_on_select_button_0_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter1/PanelMoreInformation0/VBoxContainer/BackButton0" to="." method="_on_back_button_0_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/HBoxContainer/ButtonMoreInformation1" to="." method="_on_button_more_information_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter2/VBoxContainer/SelectButton1" to="." method="_on_select_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter2/PanelMoreInformation1/VBoxContainer/BackButton1" to="." method="_on_back_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/HBoxContainer/ButtonMoreInformation2" to="." method="_on_button_more_information_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter3/VBoxContainer/SelectButton2" to="." method="_on_select_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacter3/PanelMoreInformation2/VBoxContainer/BackButton2" to="." method="_on_back_button_2_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_2_pressed"]
